<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:keepScreenOn="true"
    tools:context=".optionsActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        tools:context=".optionsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Device name:"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_device_address"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/device_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_state"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/connection_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disconnected"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/data_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_data"
                        android:textColor="#1565C0"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/data_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textColor="#ff6666"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!--        graphView put under a linearLayout view to click a picture of view-->
        <LinearLayout
            android:id="@+id/captureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphview"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clickForService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Click For Service"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/graphBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_start"
                android:enabled="false"
                android:text="Start"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/stopGraphBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_stop1"
                android:enabled="false"
                android:text="Stop"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/graphResetBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_reset"
                android:text="Reset"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/sendToCloud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_cloud_yes"
                android:enabled="false"
                android:text="Start Upload"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/stopToCloud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_cloud_no"
                android:enabled="false"
                android:text="Stop Upload"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/record_CSV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_csv"
                android:enabled="false"
                android:text="Start"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/screenShot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_cam"
                android:enabled="false"
                android:text="Capture Graph"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sendToDoctor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_send"
                android:enabled="false"
                android:text="Send To Doctor"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:text="Go back to see more options"
            android:textColor="#1565C0" />
    </LinearLayout>
</ScrollView>