<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context=".AllAtOnceActivity"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        tools:context=".AllAtOnceActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device name:"
                android:textColor="#1565C0"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1565C0"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textColor="#1565C0"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1565C0"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textColor="#1565C0"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textColor="#1565C0"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ECG Values:"
                android:textColor="#1565C0"
                android:textSize="18sp" />
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/data_value_ecg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="#1565C0"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/captureView_ecg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphview_ecg"
            android:layout_width="match_parent"
            android:layout_height="199dp" />
        </LinearLayout>

        <Button
            android:id="@+id/capture_ecg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:text="ECG screenshot"
            android:textColor="#FFFFFF"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EMG Values:"
                android:textColor="#1565C0"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_value_emg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="#1565C0"

                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/captureView_emg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphview_emg"
            android:layout_width="match_parent"
            android:layout_height="199dp" />
        </LinearLayout>
        <Button
            android:id="@+id/capture_emg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:text="EMG screenshot"
            android:textColor="#FFFFFF"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GSR Values:"
                android:textColor="#1565C0"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_value_gsr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="#1565C0"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/captureView_gsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphview_gsr"
            android:layout_width="match_parent"
            android:layout_height="199dp" />
        </LinearLayout>
        <Button
            android:id="@+id/capture_gsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:text="GSR screenshot"
            android:textColor="#FFFFFF"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Pulse Values:"
                android:textColor="#1565C0"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_value_pulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="#1565C0"

                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/captureView_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphview_pulse"
            android:layout_width="match_parent"
            android:layout_height="199dp" />
        </LinearLayout>
        <Button
            android:id="@+id/capture_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:text="Pulse screenshot"
            android:textColor="#FFFFFF"/>

        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clickForService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Click For Service"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/graphBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_start"
                android:enabled="false"
                android:text="Start"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/stopGraphBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_stop1"
                android:enabled="false"
                android:text="Stop"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/graphResetBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_reset"
                android:text="Reset"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendToCloud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_cloud_yes"
                android:enabled="false"
                android:text="Start Upload"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/stopToCloud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_cloud_no"
                android:enabled="false"
                android:text="Stop Upload"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/record_CSV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_csv"
                android:text="Start"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sendToDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/ic_send"
                android:text="Send To Doctor"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>